--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,15 @@
 		font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 		font-size: 2em;
 	}	
+	h3 {
+		font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+		font-size: 2em;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	h4 {
+		font-size: 1.5em;
+	}
 	p {
 		font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
 		font-size: 1em;
