--- a/app/assets/stylesheets/cardsdisplay.scss
+++ b/app/assets/stylesheets/cardsdisplay.scss
@@ -13,6 +13,7 @@ margin: 50px 1% 0 1%;
 border-radius: 15px 15px 15px 15px;
 // background-color: darken($search-color, 5%);
 background: darken($search-color, 2%);
+text-overflow: ellipsis;
 
 
 }
