--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,9 +2,12 @@
 	
 		<% @users.each do |user| %>
 			
-				<%= link_to user.first_name , user_path(user.id) %> <%= link_to user.last_name , user_path(user.id) %> , <%= user.last_name %>
-				<%= link_to "Binder", user_path(user.id) %>
-				<%= link_to "Propose Trade", new_user_trade_path(user.id) %> <br/>
+				<h3> <%= link_to user.first_name , user_path(user.id) %> 
+				<%= link_to user.last_name , user_path(user.id) %> <br/> </h3>
+			
+				<h4> <%= link_to "View Binder", user_path(user.id) %> <br/>
+				<%= link_to "Propose Trade", new_user_trade_path(user.id) %> <br/> </h4>
+				<br/>
 		<% end %>
 	
 
