--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -19,11 +19,12 @@
 							<p>WHAT NEEDS TO GO HERE? 
 							<% card['text'].truncate(50) +  "..." %> 
 							<p><%= card['flavor'] %></p> <br/>
-							<p><%= card['artist'] %></p> 
+							<p><%= card['artist'] %></p>  <br/>
 						  	<%= link_to add_to_tradeable_path(card.id), :method => :put do %> 
 								<div class = "wantwish"> 		
 									<img  src="http://cdn.flaticon.com/png/256/46041.png">
 								</div>
+								
 							<% end %>
 							<%= link_to add_to_wanted_path(card.id), :method => :put do %>
 								<div class = "wantwish"> 
