--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,16 +34,14 @@
     
     <!-- nav -->
   
-    <div class="nav">
-      <div class= "evilwrapper">
+    <div class="nav nav-mobile-collapse">
+      <div class= "wrapper">
     
         <div class="nav-button nav-button-search ">
 
            <%= link_to image_tag( src="http://cdn.flaticon.com/png/256/63975.png"), cards_path%>
         </div>
       
-      
-
         <% if current_user %>
           <div class="nav-button nav-button-user">
             <%= link_to image_tag(src = "http://cdn.flaticon.com/png/256/14006.png"), user_path(current_user.id)%>
