--- a/app/assets/stylesheets/cardsdisplay.scss
+++ b/app/assets/stylesheets/cardsdisplay.scss
@@ -14,6 +14,7 @@ border-radius: 15px 15px 15px 15px;
 // background-color: darken($search-color, 5%);
 background: darken($search-color, 2%);
 text-overflow: ellipsis;
+box-shadow: 5px 5px 5px darken($search-color, 10%);
 
 
 }
