--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,19 +1,19 @@
-$search-color:  #96CEB4; 	
-$trade-color:  #FFEEAD; 
-$user-color: 	#FF6F69; 
-$friends-color: #FF9452; 
-$headfoot-color: #E69CB1; 
-$config-color: #E69CB1; 
+// $search-color:  #96CEB4; 	
+// $trade-color:  #FFEEAD; 
+// $user-color: 	#FF6F69; 
+// $friends-color: #FF9452; 
+// $headfoot-color: #E69CB1; 
+// $config-color: #E69CB1; 
 
-// $search-color:  #168CB0; 	
-// $trade-color:  #16D339; 
-// $user-color: 	#17BFAE; 
-// $friends-color: #F27E93; 
-// $headfoot-color: #EC5A4B; 
-// $config-color: #EC5A4B; 
+$search-color:  #168CB0; 	
+$trade-color:  #16D339; 
+$user-color: 	#17BFAE; 
+$friends-color: #F27E93; 
+$headfoot-color: #EC5A4B; 
+$config-color: #EC5A4B; 
 
 .config-theme{
-	background-color: $config-color;
+	background-color: $headfoot-color;
 	padding: 5%, 5%, 5%, 5%; 
 }
  
@@ -51,7 +51,10 @@ div.trade-theme{
 	border-radius: 15px 15px 15px 15px;
 	width: 40%;
 	height: 16%;
+
 	float:left; 
+
+	box-shadow: 5px 5px 5px darken($trade-color, 10%);
 
 	img {
 		width: 90%;
