--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
         <h1> MTG TRADE BINDER </h1>
           <% if current_user %>
             Signed in as <%= current_user.email %>. <br/>at <%= current_user.latitude %> <%= current_user.longitude %> 
-            <%= link_to "Log out", session_path("current"), :method => :delete %>
+            <%= link_to "Log out", session_path("current"), :method => :delete %><br>
+            <%= link_to "My Trades", user_trades_path(current_user.id) %>
           <% end %>
             
         </p>
