--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,56 +13,12 @@
 <br/>
 	<h2>Trade Binder</h2>
 		</br>
-			<table>
-				<tbody>
-					<tr>
-						<th>
-							<h4>Quantity</h4>
-						</th>
-						<th>
-							<h4>Card Name</h4>
-						</th>
-						<th>
-							<h4>From Set</h4>
-						</th>						
-						<th>
-							<h4>Card Type</h4>
-						</th>
-
-						<th>
-							<h4>Color/Cost</h4>
-						</th>
-						<th>
-							<h4>Propose Trade</h4>
-						</th>
-					</tr>
-						<% @user.tradeable_cards.each do |listed_card| %>
-					<tr>
-						<td>
-							<%= listed_card.amount %>
-						</td>
-						<td>
-							<%= link_to(listed_card.card.name, card_path(listed_card.card.id))  %>
-						</td>
-						<td>							
-							 <%= listed_card.card.card_set.name %>	 
-						</td>
-							<% type_array = [] %>
-							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
-						<td>
-							<%= type_array %>
-						</td> 
-						<td>				
-							<%= all_mana_cost_images(listed_card.card) %>							
-						</td>									
-					
-					<td>
-						<%= link_to "Propose Trade", new_user_trade_path(current_user.id) %>
-					</td>
-				<% end %>
-				</tbody>
-			</table>
-
+		<%= form_for @user do |f| %>
+			<%= f.fields_for :tradeable_list do |list_fields| %>
+				<%= render "tradeable_list", :ff => list_fields %>
+			<% end %>
+			<%= f.submit "Save" %>
+		<% end %>
 		</br>
 
 	<h2>Wish List</h2>
