Moved wish list to its own partial

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,54 +23,13 @@
 
 	<h2>Wish List</h2>
 		</br>
-			<table>
-				<tbody>
-					<tr>
-						<th>
-							<h4>Quantity</h4>
-						</th>
-						<th>
-							<h4>Card Name</h4>
-						</th>
-						<th>
-							<h4>From Set</h4>
-						</th>						
-						<th>
-							<h4>Card Type</h4>
-						</th>
-
-						<th>
-							<h4>Color/Cost</h4>
-						</th>
-						<th>
-							<h4>Search Nearby Cards</h4>
-						</th>
-					</tr>
-						<% @user.wanted_cards.each do |listed_card| %>
-					<tr>
-						<td>
-							<%= listed_card.amount %>
-						</td>
-						<td>
-							<%= link_to(listed_card.card.name, card_path)  %>
-						</td>
-						<td>							
-							 <%= listed_card.card.multiverseid %> - <%= listed_card.card.card_set.name %>	 
-						</td>
-							<% type_array = [] %>
-							<%  listed_card.card.card_types.each { |type| type_array << type.name  } %>
-						<td>
-							<%= type_array %>
-						</td> 
-						<td>													
-							<%= all_mana_cost_images(listed_card.card) %>
-						</td>
-						<td>									<%= link_to "Search for available cards nearby", new_user_trade_path(current_user.id) %>
-						</td>									
-					</tr>
-				<% end %>
-				</tbody>
-			</table>	
-		</div>
-	</div>
+		<%= form_for @user do |f| %>
+			<%= f.fields_for :wanted_list do |list_fields| %>
+				<%= render "wanted_list", :ff => list_fields %>
+			<% end %>
+			<%= f.submit "Save" %>
+		<% end %>
 </div>
+
+
+
