--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -1,37 +1,42 @@
-<table>
-	
-	<tbody>
-		<tr>
-			<th>
-				<h4>Quantity</h4>
-			</th>
-			<th>
-				<h4>Name</h4>
-			</th>
-			<th>
-				<h4>Set</h4>
-			</th>						
-			<th>
-				<h4>Type</h4>
-			</th>
+<%= form_for @user do |f| %>
+	<%= f.fields_for :wanted_list do |list_fields| %>
+		<table>
+			<tbody>
+				<tr>
+					<th>
+						<h4>Quantity</h4>
+					</th>
+					<th>
+						<h4>Name</h4>
+					</th>
+					<th>
+						<h4>Set</h4>
+					</th>						
+					<th>
+						<h4>Type</h4>
+					</th>
 
-			<th>
-				<h4>Cost</h4>
-			</th>
-			<th>
-				<h4>Actions</h4>
-			</th>
-		</tr>
+					<th>
+						<h4>Cost</h4>
+					</th>
+					<th>
+						<h4>Actions</h4>
+					</th>
+				</tr>
 
-		<% i = 0 %>
-		<%= ff.fields_for :listed_cards do |listed_card_fields| %>
-			<% listed_card = @user.wanted_cards[i] %>
-			<%= render partial: 'card_row',  :locals => {:f => listed_card_fields, :listed_card => listed_card} %>
-			<% i += 1 %>
-		<% end %>
-	</tbody>
+				<% i = 0 %>
+				<%= list_fields.fields_for :listed_cards do |listed_card_fields| %>
+					<% listed_card = @user.wanted_cards[i] %>
+					<%= render partial: 'card_row',  :locals => {:ff => listed_card_fields, :listed_card => listed_card} %>
+					<% i += 1 %>
+				<% end %>
+				
+			</tbody>
 
-</table>
+		</table>
+	<% end %>
+	<%= f.submit "Save" %>
+<% end %>
 
 
 
