--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,63 +16,30 @@
 
   <body>
 
-    <div class="header mobile-collapse ">
-      <div class="section-inner mobile-collapse ">
-        <div class ="title"> 
-        <p class="userinfo">
         <h1> MTG TRADE BINDER </h1>
           <% if current_user %>
             Signed in as <%= current_user.email %>. <br/>at <%= current_user.latitude %> <%= current_user.longitude %> 
             <%= link_to "Log out", session_path("current"), :method => :delete %><br>
             <%= link_to "My Trades", user_trades_path(current_user.id) %>
           <% end %>
-            
-        </p>
-        </div>
-      </div>
-    </div>
-    
     
     <!-- nav -->
   
-    <div class="nav nav-mobile-collapse">
-      <div class= "wrapper">
-    
-        <div class="nav-button nav-button-search ">
+             <%= link_to "Card Search", cards_path%>
 
-           <%= link_to image_tag( src="http://cdn.flaticon.com/png/256/63975.png"), cards_path%>
-        </div>
       
         <% if current_user %>
-          <div class="nav-button nav-button-user">
-            <%= link_to image_tag(src = "http://cdn.flaticon.com/png/256/14006.png"), user_path(current_user.id)%>
-          </div>
-          <div class="nav-button  nav-button-trades">
-            <%= link_to image_tag(src= "http://cdn.flaticon.com/png/256/46778.png"), users_path%>
-          </div>
-          <div class="nav-button nav-button-friends">
-            <%= link_to image_tag(src = "http://cdn.flaticon.com/png/256/47352.png"), friends_path  %>
-          </div>    
-          
+                <%= link_to "Trade Binder", user_path(current_user.id)%>
 
-          
-         <% else %>
-         
-          <div class="nav-big-button config-theme  ">
-        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-    
-          <% end %>
-          </div>
-      </div>
-    </div>
+                <%= link_to "My Trades", users_path%>
 
-      <%= yield %>
-
-   
+                <%= link_to "Friends", friends_path  %>
+        <% else %>
+                <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+        <% end %>
+      
+        <%= yield %>
 
   </body>
-<div class = "footer">
-MAGIC DADDIES
-</div>
 
 </html>
