added mana mages to card display table

--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -31,7 +31,7 @@
 				<%= card.card_types.first.name %>
 			</td>
 			<td>
-				<%= card.mana_cost %>
+				<%= all_mana_cost_images(card) %>
 			</td>
 			<td>
 				<%= card.card_set.name %>
