--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
-<div class="yowhowho section-inner user-theme mobile-collapse" >
-
+<div>
 
 <br/>	
 		<% @current_position.each do |pimpdaddy| %>
@@ -11,7 +10,7 @@
 		<% end %>
 			
 <br/>
-	<h2><%= link_to "Trade Binder", fetch_list_path(:list_id => @user.tradeable_list.id), :remote => true %> / <%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id), :remote => true %> / <%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id), :remote => true %></h2>
+	<h2><%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id), :remote => true %> / <%= link_to "Trade Binder", fetch_list_path(:list_id => @user.tradeable_list.id), :remote => true %> / <%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id), :remote => true %></h2>
 
 	<div id="list-partial">
 		
