--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -1,16 +1,16 @@
 <%= form_for @user do |f| %>
 	<%= f.fields_for :wanted_list do |list_fields| %>
-		<table>
+		<table class="table-minimal fixed">
 			<tbody>
 				<tr>
 					<th>
-						<h4>Inventory qty</h4>
+						<h4>Inv</h4>
 					</th>
 					<th>
-						<h4>Trade qty</h4>
+						<h4>Trade</h4>
 					</th>
 					<th>
-						<h4>Wish qty</h4>
+						<h4>Want</h4>
 					</th>
 					<th>
 						<h4>Name</h4>
@@ -34,13 +34,13 @@
 				<%= list_fields.fields_for :listed_cards do |listed_card_fields| %>
 					<% listed_card = @user.wanted_cards[i] %>
 						<tr>
-							<td>
+							<td class="inventory-column">
 								<%= @user.amount_of_card_in("inventory_list", listed_card.card_id) %>
 							</td>
-							<td> 
+							<td class="tradeable-column"> 
 								<%= @user.amount_of_card_in("tradeable_list", listed_card.card_id) %>
 							</td>
-							<td>
+							<td class="wanted-column">
 								<%= listed_card_fields.number_field :amount %>
 							</td>
 							<td>
@@ -58,7 +58,7 @@
 								<%= all_mana_cost_images(listed_card.card) %>
 							</td>
 							<td>
-								<%= link_to "Move to #{}", root_url %>
+								
 							</td>
 						</tr>
 					<% i += 1 %>
