--- a/app/views/users/from_list.js.erb
+++ b/app/views/users/from_list.js.erb
@@ -1,1 +1,1 @@
-$("#list-partial").html("<%= escape_javascript(render "#{@list_partial}", locals: {list_name: @list_partial}) %>"); 
+$("#list-partial").html("<%= escape_javascript(render "#{@list_partial}") %>"); 
