--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,22 @@
-<div>
+<div class="user-show">
 
-<br/>	
-		<% @current_position.each do |pimpdaddy| %>
+	<ul class="accordion-tabs">
+		<li class="tab-header-and-content">
+			<%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id), :class => "is-active tab-link", :remote => true %>
+		</li>
+		<li class="tab-header-and-content">
+			<%= link_to "Trade List", fetch_list_path(:list_id => @user.tradeable_list.id), :class => "tab-link", :remote => true %>
+		</li>
+		<li class="tab-header-and-content">
+			<%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id), :class => "tab-link", :remote => true %>
+		</li>
 		
+		<div id="list-partial"></div>
 
-		<%= link_to pimpdaddy.first_name , user_path(pimpdaddy.id) %> <%= link_to pimpdaddy.last_name , user_path(pimpdaddy.id) %>   is <%= current_user.distance_to(pimpdaddy).round(2) %> km away.
-<br/>
-
-		<% end %>
-			
-<br/>
-	<h2><%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id), :remote => true %> / <%= link_to "Trade Binder", fetch_list_path(:list_id => @user.tradeable_list.id), :remote => true %> / <%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id), :remote => true %></h2>
-
-	<div id="list-partial">
-		
-	</div>
+	</ul>
 
 </div>
+
 
 
 
