--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,6 +3,12 @@
 	@include outer-container;
 }
 
+.add-card {
+	input {
+		@include span-columns(3);
+	}
+}
+
 .table-minimal {
   
 ///////////////////////////////////////////////////////////////////////////////////
@@ -40,7 +46,7 @@
   $table-border: 1px solid $table-border-color;
   $table-background: $base-background-color;
   $table-header-background: lighten($table-background, 10);
-  $table-hover-background: darken($table-background, 2);
+  $table-hover-background: darken($table-background, 4);
   $table-stripe-background: darken($table-background, 4);
   $table-stripe-background-hover: darken($table-stripe-background, 5);
   $table-padding: .75em 1em;
@@ -49,7 +55,7 @@
   border-spacing: 0;
 
   tbody {
-    tr:hover > td, tr:hover > th {
+    tr:hover > td:nth-child(4), tr:hover > th {
       background-color: $table-hover-background;
     }
     tr:first-child td {
@@ -108,17 +114,17 @@
 // table.fixed { table-layout:fixed; }
 // table.fixed td { overflow: hidden; }
 
-table input {
-	width: 100%;
+.fixed input {
+	width: 60px;
 }
 
-tr th:nth-child(1), tr th:nth-child(2), tr th:nth-child(3) {
-	@include span-columns(2);
-}
+// tr th:nth-child(1), tr th:nth-child(2), tr th:nth-child(3) {
+// 	@include span-columns(2);
+// }
 
-tr td:nth-child(1), tr td:nth-child(2), tr td:nth-child(3) {
-	@include span-columns(2);
-}
+// tr td:nth-child(1), tr td:nth-child(2), tr td:nth-child(3) {
+// 	@include span-columns(2);
+// }
 
 .accordion-tabs {
   
