--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -8,12 +8,19 @@
 			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
 			<% unless trade.status == "complete" %>
 				<%= link_to "Modify Trade #{trade.id}", edit_trade_path(trade.id) %>
-				<%= link_to "Cancel Trade", trade_path(trade.id), method: :destroy %>
+				<%= link_to "Cancel Trade", cancel_trade_path(trade.id), method: :destroy %>
 			<% end %>
 			<br>
 		<% end %>
 	<h2>Completed Trades</h2>
 		<% @trades.where(status: "complete").each do |trade| %>
+			Trade with <%= trade.initiator == current_user ? trade.receiver.first_name : trade.initiator.first_name  %>
+			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
+			<br>
+		<% end %>
+
+	<h2>Cancelled Trades</h2>
+		<% @trades.where(status: "cancelled").each do |trade| %>
 			Trade with <%= trade.initiator == current_user ? trade.receiver.first_name : trade.initiator.first_name  %>
 			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
 			<br>
