--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,46 @@
-<div>
-	
-	<% @users.each do |user| %>
-		
-			<h3> <%= link_to user.first_name , user_path(user.id) %> 
-			<%= link_to user.last_name , user_path(user.id) %> <br/> </h3>
-		
-			<h4> <%= link_to "View Binder", user_path(user.id) %> <br/>
-			<%= link_to "Propose Trade", new_user_trade_path(user.id) %> <br/> </h4>
-			<br/>
-	<% end %>
+<h1>Find Trades</h1>
 
-</div>
+<h3>Find a card</h3>
+<table class='search-section'>
+	<%= form_tag("/cards", :id => "add-card", method: "get") do %>
+		<%= fields_for :card_fields do |ff| %>	
+			<tr>				
+				<td class = "form-box">
+					<%= ff.label :name, "Name:" %>
+					<%= ff.text_field  :name %> 						
+				</td>		
+				<td>
+					<%= ff.label :card_set, "Set:" %>
+						<% set_options = ["All"] + CardSet.all.map { |set| set.name} %>		
+						<%= ff.select :card_set, set_options %>
+				</td>
+			</tr>	
+			<tr>
+				<td>
+					<%= ff.label :distance, "Distance" %>
+					<% distance_options = [
+						['< 1 km', 1],
+						['< 5 km', 5],
+						['< 10 km', 10],
+						['< 25 km', 25],
+						['< 50 km', 50],
+						['< 100 km', 100],
+
+					] %>
+					<%= ff.select :distance, distance_options %>
+				</td>
+			</tr>
+			<tr>
+				<td><%= ff.submit "Search", :id => "submit-button" %></td>
+			</tr>
+		<% end %>	
+	<% end %>
+	
+</table>
+
+<!-- Cards to include -->
+<div id="display-card"></div>
+
+<div id="display-users"></div>
+
 
