--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,18 @@
-<div class="user-show">
+<div class="users show">
+
+	<h2 id="user" data-id=<%= @user.id %>><%= @user.first_name %> <%= @user.last_name %>'s Trade Binder</h2>
 
 	<ul class="accordion-tabs">
 		<li class="tab-header-and-content">
-			<%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id), :class => "is-active tab-link", :remote => true %>
+			<%= link_to "Inventory", fetch_list_path(:list_id => @user.inventory_list.id, :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
 		</li>
 		<li class="tab-header-and-content">
-			<%= link_to "Trade List", fetch_list_path(:list_id => @user.tradeable_list.id), :class => "tab-link", :remote => true %>
+			<%= link_to "Trade List", fetch_list_path(:list_id => @user.tradeable_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
 		</li>
 		<li class="tab-header-and-content">
-			<%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id), :class => "tab-link", :remote => true %>
+			<%= link_to "Wish List", fetch_list_path(:list_id => @user.wanted_list.id, :user_id => @user.id), :class => "tab-link", :remote => true %>
 		</li>
-		
+
 		<div id="list-partial"></div>
 
 	</ul>
