--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,31 +1,18 @@
 <div class="section-inner search-theme mobile-collapse">
 	<h1>Trades Overview</h1>
+	
+		<ul class="accordion-tabs">
+			<li class="tab-header-and-content">
+				<%= link_to "Active Trades", fetch_trades_path(:status => "pending", :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
+			</li>
+			<li class="tab-header-and-content">
+				<%= link_to "Completed Trades", fetch_trades_path(:status => "complete", :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
+			</li>
+			<li class="tab-header-and-content">
+				<%= link_to "Cancelled Trades", fetch_trades_path(:status => "cancelled", :user_id => @user.id), :class => "is-active tab-link", :remote => true %>
+			</li>
 
-	<% if @trades.count > 0 %>
-	<h2>Active Trades</h2>
-		<% @trades.where(status: "pending").each do |trade| %>
-			Trade with <%= trade.initiator == current_user ? trade.receiver.first_name : trade.initiator.first_name  %>
-			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
-			<% unless trade.status == "complete" %>
-				<%= link_to "Modify Trade #{trade.id}", edit_trade_path(trade.id) %>
-				<%= link_to "Cancel Trade", cancel_trade_path(trade.id), method: :destroy %>
-			<% end %>
-			<br>
-		<% end %>
-	<h2>Completed Trades</h2>
-		<% @trades.where(status: "complete").each do |trade| %>
-			Trade with <%= trade.initiator == current_user ? trade.receiver.first_name : trade.initiator.first_name  %>
-			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
-			<br>
-		<% end %>
+			<div id="trades-partial"></div>
 
-	<h2>Cancelled Trades</h2>
-		<% @trades.where(status: "cancelled").each do |trade| %>
-			Trade with <%= trade.initiator == current_user ? trade.receiver.first_name : trade.initiator.first_name  %>
-			<%= link_to "View Trade #{trade.id}", trade_path(trade.id) %>
-			<br>
-		<% end %>
-	<% end %>
-
-
+		</ul>
 </div>
