Changed edit and show views to display cards in a table

--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -2,62 +2,23 @@
 
 	<% if @trade.initiator == current_user %>
 		<%= form_for @trade do |f| %>
-
 			<h2>Your Cards</h2>
-			<% i = 0 %>
-			<% current_user.tradeable_cards.each do |listed_card| %>
-
-				<%= select_tag "trade[cards_from_initiator][#{listed_card.id.to_i}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_initiator[i]), disabled: true  %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i +=1 %>
-
-			<% end %>
-
-			<h2><%= @user.first_name %>'s Cards</h2>
-			<% i = 0 %>
-			<% @user.tradeable_cards.each do |listed_card| %>
-
-				<%= select_tag "trade[cards_from_receiver][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_receiver[i]), disabled: true %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-
-			<% end %>
-
+			<%= render "display_initiator_tradeable_cards", :bool => true %>
+			<h2><%= @trade.other_user(current_user).full_name %>'s Cards</h2>
+			<%= render "display_receiver_tradeable_cards", :bool => true %>
 		<% end %>
 
 	<% elsif @trade.receiver == current_user %>
 		<%= form_for @trade do |f| %>
+			<%= render "display_initiator_tradeable_cards", :bool => true %>
 
-			<h2>Your Cards</h2>
-			<% i = 0 %>
-			<% current_user.tradeable_cards.each do |listed_card| %>
-
-				<%= select_tag "trade[cards_from_receiver][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_receiver[i]), disabled: true %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-
-			<% end %>
-
-			<h2><%= @user.first_name %>'s Cards</h2>
-			<% i = 0 %>
-			<% @user.tradeable_cards.each do |listed_card| %>
-
-				<%= select_tag "trade[cards_from_initiator][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_initiator[i]), disabled: true %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-
-			<% end %>
-
+			<%= render "display_receiver_tradeable_cards", :bool => true %>
 		<% end %>
 	<% end %>
+
 	<% unless @trade.status == "complete" %>
+		<%= link_to "Edit Trade", edit_trade_path(@trade.id) %>
 		<%= button_to "Accept Trade", accept_trade_path(@trade.id) %>
-		<%= link_to "Modify Trade", edit_trade_path(@trade.id) %>
 	<% end %>
 
 </div>
-
-
-
-
-
