--- a/app/views/trades/edit.html.erb
+++ b/app/views/trades/edit.html.erb
@@ -1,46 +1,27 @@
 <div class="section-inner search-theme mobile-collapse">
+
 	<% if @trade.initiator == current_user %>
 		<%= form_for @trade do |f| %>
-
 			<h2>Your Cards</h2>
-			<% i = 0 %>
-			<% current_user.tradeable_cards.each do |listed_card| %>
-				<%= select_tag "trade[cards_from_initiator][#{listed_card.id.to_i}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_initiator[i])  %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i +=1 %>
-			<% end %>
-
-			<h2><%= @user.first_name %>'s Cards</h2>
-			<% i = 0 %>
-			<% @user.tradeable_cards.each do |listed_card| %>
-				<%= select_tag "trade[cards_from_receiver][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_receiver[i]) %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-			<% end %>
-
-			<%= f.submit "Propose Trade" %>
+			<%= render "display_initiator_tradeable_cards", :bool => false %>
+			<h2><%= @trade.other_user(current_user).full_name %>'s Cards</h2>
+			<%= render "display_receiver_tradeable_cards", :bool => false %>
+			<%= f.submit "Propose Changes" %>
 		<% end %>
 
 	<% elsif @trade.receiver == current_user %>
 		<%= form_for @trade do |f| %>
-
 			<h2>Your Cards</h2>
-			<% i = 0 %>
-			<% current_user.tradeable_cards.each do |listed_card| %>
-				<%= select_tag "trade[cards_from_receiver][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_receiver[i]) %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-			<% end %>
-
-			<h2><%= @user.first_name %>'s Cards</h2>
-			<% i = 0 %>
-			<% @user.tradeable_cards.each do |listed_card| %>
-				<%= select_tag "trade[cards_from_initiator][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_initiator[i]) %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-			<% end %>
-
-			<%= f.submit "Propose Trade" %>
+			<%= render "display_initiator_tradeable_cards", :bool => false %>
+			<h2><%= @trade.other_user(current_user).full_name %>'s Cards</h2>
+			<%= render "display_receiver_tradeable_cards", :bool => false %>
+		<%= f.submit "Propose Changes" %>
 		<% end %>
 	<% end %>
+	
+
+	<% unless @trade.status == "complete" %>
+		<%= link_to "Cancel", trade_path(@trade.id) %>
+	<% end %>
+
 </div>
