--- a/app/views/users/_display_users.html.erb
+++ b/app/views/users/_display_users.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table-minimal">
 		<thead>
 			<tr>
 				<th>Results</th>
@@ -14,8 +14,7 @@
 		<% @users.each do |user| %>
 			<tr>
 				<td>
-					<h3> <%= link_to user.first_name , user_path(user.id) %> 
-					<%= link_to user.last_name , user_path(user.id) %> <br/> </h3>
+					<%= link_to user.full_name , user_path(user.id) %>
 				</td>
 				<td>
 					$ 0 / $ 10
