Fixed accordion tabs to properly display content

--- a/app/views/trades/_list_trades.html.erb
+++ b/app/views/trades/_list_trades.html.erb
@@ -9,7 +9,7 @@
 			</tr>
 		</thead>
 		<tbody>
-		<% @trades.each do |trade| %>
+		<% @trades.where(status: status).each do |trade| %>
 			<tr>
 				<td>
 					<%= link_to "View", trade_path(trade.id) %>
