--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Find Trades</h1>
+<h1>Find Users to Trade With</h1>
 
-<h3>Find a card</h3>
+<h3>Search for a card</h3>
 <table class='search-section'>
 	<%= form_tag("/cards", :id => "add-card", method: "get") do %>
 		<%= fields_for :card_fields do |ff| %>	
