--- a/app/views/cards/_card_display.html.erb
+++ b/app/views/cards/_card_display.html.erb
@@ -25,7 +25,7 @@
 	<% @cards.each do |card| %>
 		<tr>
 			<td>
-				<%= card.name %>
+				<%= link_to "#{card.name}", card_path(card.id) %>
 			</td>
 			<td>
 				<%= card.card_types.first.name %>
