--- a/app/views/cards/_card_display_first.erb
+++ b/app/views/cards/_card_display_first.erb
@@ -1,3 +1,4 @@
+<h4>Looking for</h4>
 <table class="table-minimal">
 	<tr>
 		<th>
@@ -13,19 +14,13 @@
 			Set
 		</th>
 		<th>
-			$$$
-		</th>
-		<th>
-			Add to Trade Binder
-		</th>
-		<th>
-			Add to Wishlist
+			TCGMid
 		</th>
 	</tr>
 	<% @cards.each do |card| %>
 		<tr>
 			<td id="card-id" data-id=<%= card.id %>>
-				<%= card.name %>
+				<%= link_to "#{card.name}", card_path(card.id) %>
 			</td>
 			<td>
 				<%= card.card_types.first.name %>
@@ -39,7 +34,6 @@
 			<td>
 				$4.95
 			</td>
-
 		</tr>
 	<% end %>
 </table>
