--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -3,20 +3,10 @@
 		<%= form_for [@user, @trade] do |f| %>
 
 			<h2>Your Cards</h2>
-			<% i = 0 %>
-			<% current_user.tradeable_cards.each do |listed_card| %>
-				<%= select_tag "trade[cards_from_initiator][#{listed_card.id.to_i}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_initiator[i])  %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i +=1 %>
-			<% end %>
+			<%= render "display_current_user_tradeable_cards", :bool => false %>
 
 			<h2><%= @user.first_name %>'s Cards</h2>
-			<% i = 0 %>
-			<% @user.tradeable_cards.each do |listed_card| %>
-				<%= select_tag "trade[cards_from_receiver][#{listed_card.id}]", options_for_select((Array.new(listed_card.amount + 1) { |i| i }), @trade.qty_from_receiver[i]) %> of <%= listed_card.amount %>
-				<%= listed_card.card.name %> <br>
-				<% i += 1 %>
-			<% end %>
+			<%= render "display_user_tradeable_cards", :bool => false %>
 
 			<%= f.submit "Propose Trade" %>
 		<% end %>
