Displaying all users by default on user index view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,6 +41,8 @@
 <!-- Cards to include -->
 <div id="display-card"></div>
 
-<div id="display-users"></div>
+<div id="display-users">
+	<%= render "display_users" %>
+</div>
 
 
