--- a/app/views/users/_wanted_list.html.erb
+++ b/app/views/users/_wanted_list.html.erb
@@ -44,7 +44,7 @@
 								<%= listed_card_fields.number_field :amount %>
 							</td>
 							<td>
-								<%= listed_card.card.name %>
+								<%= link_to "#{listed_card.card.name}", card_path(listed_card.card_id) %>
 							</td>
 							<td>
 								<%= listed_card.card.card_set.name %>
